<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/grey"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="31dp"
            android:fontFamily="sans-serif-light"
            android:paddingTop="24dp"
            android:text="@string/title"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="336dp"
            android:src="@drawable/deeer" />

        <TextView
            android:id="@+id/intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:padding="16dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/intro"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/swipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:paddingRight="16dp"
            android:text="@string/swipe_right"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="6dp"
            android:paddingTop="50dp"
            android:text="@string/question_one"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="16dp"
            android:text="@string/q1text"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="229dp"
            android:src="@drawable/alligator" />

        <RadioGroup
            android:id="@+id/q1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp">

            <RadioButton
                android:id="@+id/q1alligator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/q1alligator"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:onClick="alligator"/>

            <RadioButton
                android:id="@+id/q1crocodile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/q1crocodile"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:onClick="crocodile"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="6dp"
            android:paddingTop="30dp"
            android:text="@string/question_two"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="16dp"
            android:text="@string/q2text"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="182dp"
            android:src="@drawable/leopard" />

        <RadioGroup
            android:id="@+id/q2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp">

            <RadioButton
                android:id="@+id/q2Cheetah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/q2cheetah"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/q2leopard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/q2leopard"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="6dp"
            android:paddingTop="30dp"
            android:text="@string/question_three"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="16dp"
            android:text="@string/q3text"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="253dp"
            android:src="@drawable/dolphin2" />

        <RadioGroup
            android:id="@+id/q3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp">

            <RadioButton
                android:id="@+id/q3porpoise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/q3Porpoise"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/q3dolphin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/q3Dolphin"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="6dp"
            android:paddingTop="30dp"
            android:text="@string/question_four"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="16dp"
            android:text="@string/q4text"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="273dp"
            android:src="@drawable/alpaca" />

        <RadioGroup
            android:id="@+id/q4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp">

            <RadioButton
                android:id="@+id/q4llamas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="16dp"
                android:text="@string/q4llama"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/q4alpacas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="16dp"
                android:text="@string/q4alpaca"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="6dp"
            android:paddingTop="30dp"
            android:text="@string/question_five"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="16dp"
            android:text="@string/q5text"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="264dp"
            android:src="@drawable/toad" />

        <RadioGroup
            android:id="@+id/q5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp">

            <RadioButton
                android:id="@+id/q5toad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/q5toad"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/q5frog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/q5frog"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="6dp"
            android:paddingTop="30dp"
            android:text="@string/question_six"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="347dp"
            android:src="@drawable/sealionpic" />


        <TextView
            android:paddingTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="6dp"
            android:text="@string/q6text"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/q6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/q6hint"
            android:inputType="textShortMessage"
            android:paddingRight="16dp"
            android:fontFamily="sans-serif-light"
            android:textSize="16sp"
            android:theme="@android:style/Theme.Light"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="6dp"
            android:paddingTop="30dp"
            android:text="@string/question_seven"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="18dp"
            android:text="@string/q7text"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="273dp"
            android:src="@drawable/salamander" />
        <TextView
            android:paddingTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="16dp"
            android:text="@string/q7text2"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />



            <CheckBox
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:id="@+id/q7lizard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lizard"
                android:textAppearance="?android:textAppearanceMedium" />
            <CheckBox
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:id="@+id/q7amphibian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amphibian"
                android:textAppearance="?android:textAppearanceMedium" />
            <CheckBox
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:id="@+id/q7salamander"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salamander"
                android:textAppearance="?android:textAppearanceMedium" />
            <CheckBox
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:id="@+id/q8reptile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reptile"
                android:textAppearance="?android:textAppearanceMedium" />

        <Button
            android:layout_gravity="center"
            android:textSize="16sp"
            android:id="@+id/submit_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submitanswers"
            android:background="#FFFFFF"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="20dp"/>



    </LinearLayout>

</ScrollView>