<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/grey"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvFragSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-light"
            android:paddingBottom="10dp"
            android:paddingTop="25dp"
            android:text="@string/question_five"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-light"
            android:text="@string/q5text"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-light"
            android:text="@string/q5text2"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="303dp"
            android:src="@drawable/toad" />


        <CheckBox
            android:id="@+id/cb_q5toad"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:buttonTint="#FFFFFF"
            android:fontFamily="sans-serif-light"
            android:onClick="isToadOrFrog"
            android:text="@string/q5toad"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cb_q5frog"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:buttonTint="#FFFFFF"
            android:fontFamily="sans-serif-light"
            android:onClick="isToadOrFrog"
            android:text="@string/q5frog"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cb_q5prince"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:buttonTint="#FFFFFF"
            android:fontFamily="sans-serif-light"
            android:onClick="isToadOrFrog"
            android:text="@string/q5prince"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />


    </LinearLayout>

</ScrollView>